# rdmahelper

./: .gitignore  CMakeLists.txt  FindLog4Cxx.cmake  MercuryController.cc  MercuryController.h  README.md  cscs_messages.h  rdmahelper_logging.h
cmake/: CMakeInstallation.cmake  DetectMachine.cmake  add_definition.cmake  config.cmake.build.in  config_defines.hpp.in
cnk/include/: RdmaAddr.h
hwi/include/bqc/: A2_core.h
hwi/include/common/: compiler_support.h
include/: CNKClient.h  CNKMemoryRegion.h  MercuryController.h  PointerMap.h  RdmaClient.h  RdmaCompletionChannel.h  RdmaCompletionQueue.h  RdmaConnection.h  RdmaConnectionBase.h  RdmaController.h  RdmaDevice.h  RdmaError.h  RdmaLogging.h  RdmaMemoryPool.h  RdmaMemoryRegion.h  RdmaProtectionDomain.h  RdmaRegisteredMemoryPool.h  RdmaServer.h  RdmaSharedReceiveQueue.h  SystemLock.h  event_channel.hpp  memory_pool.h  rdma_error.hpp  rdma_logging.hpp  rdma_memory_pool.hpp  rdma_memory_region.hpp  rdma_messages.h  rdma_protection_domain.hpp
ramdisk/include/services/: MessageUtility.h  ServicesConstants.h  StdioMessages.h  UserMessages.h
ramdisk/include/services/common/: CNKClient.h  CNKMemoryRegion.h  Cioslog.h  PointerMap.h  RdmaClient.h  RdmaCompletionChannel.h  RdmaCompletionQueue.h  RdmaConnection.h  RdmaConnectionBase.h  RdmaDevice.h  RdmaError.h  RdmaMemoryRegion.h  RdmaProtectionDomain.h  RdmaRegisteredMemoryPool.h  RdmaServer.h  RdmaSharedReceiveQueue.h  SignalHandler.h  SystemLock.h  Thread.h  allocator.h  flightlog.h  logging.h  memory_pool.cpp  memory_pool.hpp  rdma.h
ramdisk/src/services/common/: CNKClient.cc  CNKMemoryRegion.cc  Cioslog.cc  RdmaClient.cc  RdmaCompletionChannel.cc  RdmaCompletionQueue.cc  RdmaConnection.cc  RdmaDevice.cc  RdmaMemoryRegion.cc  RdmaProtectionDomain.cc  RdmaServer.cc  RdmaSharedReceiveQueue.cc  Verbs.h  logging.cc
src/: CNKClient.cc  CNKClient.cpp  CNKMemoryRegion.cc  CNKMemoryRegion.cpp  MercuryController.cpp  RdmaClient.cc  RdmaClient.cpp  RdmaCompletionChannel.cc  RdmaCompletionChannel.cpp  RdmaCompletionQueue.cc  RdmaCompletionQueue.cpp  RdmaConnection.cc  RdmaConnection.cpp  RdmaController.cpp  RdmaDevice.cc  RdmaDevice.cpp  RdmaLogging.cpp  RdmaMemoryPool.cpp  RdmaMemoryRegion.cc  RdmaMemoryRegion.cpp  RdmaProtectionDomain.cc  RdmaProtectionDomain.cpp  RdmaServer.cc  RdmaServer.cpp  RdmaSharedReceiveQueue.cc  RdmaSharedReceiveQueue.cpp  memory_pool.cpp  rdma_memory_pool.cpp  rdma_memory_region.cpp  rdma_protection_domain.cpp
utility/include/: Log.h  LoggingProgramOptions.h  Properties.h
utility/src/: Log.cc  LoggingProgramOptions.cc  Properties.cc
